2010-02-15 Bernhard Kraft  <kraftb@think-open.at>

	* Removed static templates and included minimal required TypoScript by default.
	* Added TypoScript top level object “tt_content” as default renderObj

2010-02-11 Bernhard Kraft  <kraftb@think-open.at>

	* Created an update wizard which allows to update systems using kb_nescefe < 1.0.0 to the current version (See documentation)
	* Fixed a bug concerning creation of translated containers
	* The colPos value being set for elements inside containers is now configurable from within the extension manager

2010-02-09 Bernhard Kraft  <kraftb@think-open.at>

	* Raised extension state to "stable"
	* Change of major version to 1.0.0
	* The position of an element in the container is now stored in a separated field "parentPosition" instead of misusing the "colPos" field
	* Now works with TYPO3 version >= 4.3.0

2009-01-23 Bernhard Kraft  <kraftb@think-open.at>

	* Fixed a bug with content-slide (THX to Georg Ringer for reporting this)
	* Added Icon for "Container Element" in TCEforms CType drop-down
	* Added Icon in "new Content Element wizard"

2008-02-28 Bernhard Kraft  <kraftb@kraftb.at>

	* Removed a debug "print_r"

2007-10-02 Bernhard Kraft  <kraftb@kraftb.at>

	* Initial release
