@@ -1,18 +1,0 @@
-# BEGIN of config
-
-includeLibs.tx_kbnescefe_pi1 = EXT:kb_nescefe/pi1/class.tx_kbnescefe_pi1.php
-
-plugin.tx_kbnescefe_pi1 = USER
-plugin.tx_kbnescefe_pi1 {
-	userFunc = tx_kbnescefe_pi1->main
-	renderObj =< tt_content
-}
-
-tt_content.list.20.kb_nescefe_pi1 = COA
-tt_content.list.20.kb_nescefe_pi1 {
-	10 = < lib.stdheader
-	20 = < plugin.tx_kbnescefe_pi1
-}
-
-
-# END of config
